# tiny_infer_core

./: .gitignore  CMakeLists.txt  README.md
benchmark/: bench_gemm.cpp
include/tinyinfer/core/: matrix.h
include/tinyinfer/ops/: gemm.h  softmax.h
reports/: 00_project_bootstrap.md  01_gemm_naive.md  03_gemm_loop_order.md  05_softmax.md
src/core/: matrix.cpp
src/ops/: gemm.cpp  softmax.cpp
tests/: test_gemm.cpp  test_matrix.cpp  test_softmax.cpp
